--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ html {
 	position: fixed;
 	width: 100%;
 	background-color: transparent;
-	margin: 0 auto;
+	margin: 0;
 	text-align: center;
 	z-index: 999;
 	transition: all 0.2s ease;
@@ -22,21 +22,21 @@ html {
 
 .nav__link {
 	display: inline-block;
-	font-size: 2.5rem;
+	font-size: 1.2rem;
 	font-family: 'Syne Mono', monospace;
 	text-transform: uppercase;
 	text-decoration: none;
 	color: whitesmoke;
-	padding: 10px;
-	margin: 20px 20px;
+	padding: 2px;
+	margin: 20px 5px;
 	letter-spacing: 2px;
 }
 
 .nav__link--contact {
-	font-size: 3rem;
+	font-size: 1.4rem;
 	border: 1px solid #999393;
-	padding: 10px 70px;
-	margin-right: 60px;
+	padding: 2px 40px;
+	margin: 20px 60px 20px 5px;
 }
 
 .nav__link:hover {
@@ -50,6 +50,7 @@ html {
 	border-color: rgb(16, 105, 4);
 	color: rgb(172, 218, 6);
 }
+
 .nav__bgr {
 	background-color: #000;
 	box-shadow: 0 10px 6px -6px black;
@@ -62,7 +63,7 @@ header {
 }
 
 header h1 {
-	font-size: 6rem;
+	font-size: 4rem;
 	color: whitesmoke;
 	text-align: center;
 	line-height: 40vh;
@@ -74,19 +75,23 @@ header h1 {
 
 .none {
 	display: none;
+
 }
 
 main {
-	margin: 5vh auto;
+	margin: auto;
+
 }
 
 .description {
 	font-size: 2.2rem;
 	text-align: center;
-	margin: 0 30px 50px 30px;
+	padding: 15px 30px 40px;
+	margin: 0;
 	font-family: 'Merienda', cursive;
 	letter-spacing: 2px;
-	font-style: italic;
+	background-color: rgb(218, 183, 30);
+	line-height: 200%;
 }
 
 .invitation {
@@ -139,14 +144,15 @@ footer {
 	background-color: #000;
 	color: aliceblue;
 	text-align: center;
-	padding: 2rem 0;
-	font-size: 24px;
+	padding: 1.2rem 0;
+	font-size: 14px;
 }
 
 .map {
 	height: 380px;
 	width: 100%;
 }
+
 .popup {
 	background-color: black;
 	color: white;
@@ -169,7 +175,18 @@ footer {
 	border-left-width: 0;
 	border-right-color: rgba(0, 0, 0, 0.8);
 }
-@media (max-width: 1000px) {
+
+@media (max-width: 800px) {
+	header {
+		height: 30vh;
+	}
+
+	header h1 {
+		font-size: 3rem;
+		line-height: 20vh;
+		padding-top: 10vh;
+	}
+
 	.nav {
 		display: flex;
 		justify-content: center;
@@ -178,51 +195,52 @@ footer {
 	}
 
 	.nav__link {
-		font-size: 2rem;
-		padding: 5px;
-		margin: 5px 5px;
-		letter-spacing: 1px;
+		margin: 20px 5px 0px, 5px;
 	}
 
 	.nav__link--contact {
-		font-size: 2rem;
-		padding: 5px 5px;
-	}
-
-	header {
-		height: 20vh;
-	}
-
-	header h1 {
-		font-size: 3rem;
-		line-height: 20vh;
-	}
-
-	main {
-		margin: 2vh auto;
+		margin: 20px 5px;
+		padding: 2px 20px;
 	}
 }
 
-@media (max-width: 630px) {
+
+@media (max-width: 487px) {
 	header h1 {
-		position: relative;
-		top: 50px;
-		background-color: transparent;
+		display: none;
+	}
+
+	header {
+		height: 17vh;
 	}
 
 	.none {
 		display: block;
-		position: absolute;
+		background-color: rgba(0, 0, 0, 50%);
+		height: 17vh;
+	}
+
+	.nav__link {
+		margin: 20px 5px 0px;
+		letter-spacing: 2px;
+	}
+
+
+	.description {
+		font-size: 1.2rem;
+		padding: 15px 30px;
+	}
+
+}
+
+@media (max-width: 356px) {
+	.nav__link {
+		letter-spacing: 2px;
+	}
+
+	.none {
+		display: block;
 		background-color: rgba(0, 0, 0, 50%);
 		height: 20vh;
-		width: 100%;
-	}
-
-	.nav {
-		z-index: 1;
-	}
-
-	.nav__link--contact {
-		padding: 5px 200px;
 	}
 }
