--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ html {
 
 .nav__link {
 	display: inline-block;
-	font-size: 1.2rem;
+	font-size: 2rem;
 	font-family: 'Syne Mono', monospace;
 	text-transform: uppercase;
 	text-decoration: none;
@@ -33,14 +33,14 @@ html {
 }
 
 .nav__link--contact {
-	font-size: 1.4rem;
+	font-size: 2.4rem;
 	border: 1px solid #999393;
 	padding: 2px 40px;
 	margin: 20px 60px 20px 5px;
 }
 
 .nav__link:hover {
-	border-bottom: 1px solid rgb(172, 218, 6);
+	/* border-bottom: 1px solid rgb(172, 218, 6); */
 	color: rgb(172, 218, 6);
 	transition: 0.3s;
 }
@@ -63,7 +63,7 @@ header {
 }
 
 header h1 {
-	font-size: 4rem;
+	font-size: 5rem;
 	color: whitesmoke;
 	text-align: center;
 	line-height: 40vh;
@@ -71,6 +71,9 @@ header h1 {
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: center;
+	font-family: 'Merienda',
+		cursive;
+
 }
 
 .none {
@@ -100,6 +103,7 @@ main {
 	padding-bottom: 30px;
 }
 
+/* 
 .container1,
 .container2 {
 	display: flex;
@@ -132,6 +136,21 @@ main {
 .image:hover {
 	transform: scale(0.95);
 	opacity: 0.5;
+} */
+
+
+
+.modal-header {
+
+	border-bottom: none;
+}
+
+.modal-title {
+	color: #000;
+}
+
+.modal-footer {
+	display: none;
 }
 
 h2 {
@@ -176,7 +195,8 @@ footer {
 	border-right-color: rgba(0, 0, 0, 0.8);
 }
 
-@media (max-width: 800px) {
+
+@media (max-width: 820px) {
 	header {
 		height: 30vh;
 	}
@@ -192,6 +212,7 @@ footer {
 		justify-content: center;
 		flex-wrap: wrap;
 		margin: 0;
+		font-size: .2rem;
 	}
 
 	.nav__link {
@@ -205,7 +226,7 @@ footer {
 }
 
 
-@media (max-width: 487px) {
+@media (max-width: 500px) {
 	header h1 {
 		display: none;
 	}
