--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 html {
 	font-size: 10px;
 	font-family: 'Montserrat', sans-serif;
-	background-color: #fcf2e4;
+	background-color: #F1F2DD;
 
 }
 
@@ -219,11 +219,22 @@ main {
 	font-family: 'Montserrat', sans-serif;
 }
 
+.notValid {
+	content: 'not valid';
+	background-color: rgb(216, 47, 47);
+	font-size: 20px;
+	width: 230px;
+	display: flex;
+	border-radius: 30px;
+	padding-left: 10px;
+}
+
 .messageSubmitBtn {
 	display: flex;
 	flex-direction: column;
 	width: 600px;
 }
+
 .messageSubmit {
 	padding-left: 10px;
 	border: 1px solid #f5debd;
@@ -261,10 +272,17 @@ main {
 footer {
 	background-color: #000;
 	color: aliceblue;
-	text-align: center;
-	padding: 1.2rem 0;
-	font-size: 14px;
+	padding: 20px;
+	font-size: 21px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
+
+/* .footerInformations {
+	display: flex;
+	flex-direction: row;
+} */
 
 .map {
 	height: 380px;
