--- a/style.css
+++ b/style.css
@@ -57,6 +57,59 @@ html {
 	box-shadow: 0 10px 6px -6px black;
 }
 
+@media (max-width: 700px) {
+	.nav__link {
+		display: flex;
+		flex-direction: column;
+	}
+	.nav {
+		width: 250px;
+		height: 70vh;
+		background-color: rgb(72, 177, 196);
+		position: fixed;
+		top: 0;
+		right: -300px;
+		display: flex;
+		flex-direction: column;
+		align-items: flex-end;
+		border-bottom-left-radius: 100%;
+		transition: right 0.7s cubic-bezier(1, 0, 0, 1);
+	}
+	.change {
+		right: 0;
+	}
+	.hamburger_menu {
+		width: 35px;
+		height: 30px;
+		position: fixed;
+		top: 50px;
+		right: 50px;
+		display: flex;
+		flex-direction: column;
+		justify-content: space-around;
+	}
+	.nav_list {
+		/* margin-top: 50px; */
+	}
+	.line {
+		width:100%;
+		height: 3px;
+		background-color: chocolate;
+		transition: all 0.7s;
+		z-index: 2;
+	}
+	.change .line_1 {
+		transform: rotateZ(-405deg) translate(-8px, 6px);
+	}
+	.change .line_2 {
+	opacity: 0;
+	}
+	.change .line_3 {
+		transform: rotateZ(405deg) translate(-8px, -6px);
+	}
+}
+
+
 header {
 	background-image: url(./img/kwiaty1.jpg);
 	height: 40vh;
@@ -265,6 +318,7 @@ main {
 	background-color: var(--dark-green-color);
 	color: white;
 	font-family: 'Montserrat', sans-serif;
+	font-size: 20px;
 }
 .rightContactContainer {
 	width: 50%;
@@ -295,6 +349,12 @@ main {
 	font-size: 16px;
 	text-align: center;
 }
+.offerTextContainer a {
+	text-decoration: none;
+}
+.offerTextContainer a:hover {
+	text-decoration: underline;
+}
 .offerHeader {
 	font-variant: small-caps;
 	color: var(--dark-green-color);
@@ -303,7 +363,18 @@ main {
 .offerText {
 font-size: 20px;
 padding: 20px;
-
+}
+.offerBtn {
+	display: block;
+	border-radius: 30px;
+	margin: 20px, auto;
+	width: 50%;
+	height: 50px;
+	background-color: var(--dark-green-color);
+	color: white;
+	font-family: 'Montserrat', sans-serif;
+	font-size: 20px;
+	padding: auto, 15px;
 }
 
 
