--- a/slider.css
+++ b/slider.css
@@ -51,6 +51,7 @@
     background-color: var(--dark-green-color);
     color: var(--bright-green-color);
 }
+
 .dotContainer {
     height: 10%;
     text-align: center;
@@ -71,7 +72,7 @@
 .active, .dot:hover {
     background-color: var(--bright-green-color);
 }
-.slides q {
+.slides h1 {
     font-style: italic;
     font-size: 20px;
 }
