--- a/slider.css
+++ b/slider.css
@@ -1,28 +1,36 @@
 .opinionContainer {
-    height: 500px;
+    height: 400px;
     width: 1200px;
     margin: 10px auto;
+
 
 }
 
 .slidesContainer {
-    position: relative;
-    background: #FFFFFF;
-    height: 90%;
+    background-image: url(/img/opinion_background.jpg);
+    background-size: cover;
+    /* background-color: rgba(0, 0, 0, 50%); */
+    height: 100%;
+    display: flex;
 
 }
 
 .slides {
-    display: none;
-    padding: 180px;
+    padding-left:200px;
+    padding-right:200px;
     text-align: center;
-    display: flex;
-    justify-content: center;
+    margin: auto;
+    height: 100%;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 10%);
+    /* display: flex; */
+    flex-direction: column;
     align-items: center;
-    margin: auto, 10px;
+    justify-content: center;
+
 }
 
-.prev, .next {
+/* .prev, .next {
     cursor: pointer;
     position: absolute;
     top: 50%;
@@ -36,8 +44,8 @@
     user-select: none;
     border-radius: 50px 0 0 50px;
 
-}
-.next {
+} */
+/* .next {
     position: absolute;
     right: 0;
     border-radius: 50px 0 0 50px;
@@ -71,10 +79,12 @@
 }
 .active, .dot:hover {
     background-color: var(--bright-green-color);
-}
+} */
 .slides h1 {
     font-style: italic;
-    font-size: 20px;
+    font-size: 25px;
+    font-weight: 600;
+
 }
 
 .opinionAuthor {
