--- a/style.css
+++ b/style.css
@@ -57,57 +57,6 @@ html {
 	box-shadow: 0 10px 6px -6px black;
 }
 
-@media (max-width: 700px) {
-	.nav__link {
-		display: flex;
-		flex-direction: column;
-	}
-	.nav {
-		width: 250px;
-		height: 70vh;
-		background-color: rgb(72, 177, 196);
-		position: fixed;
-		top: 0;
-		right: -300px;
-		display: flex;
-		flex-direction: column;
-		align-items: flex-end;
-		border-bottom-left-radius: 100%;
-		transition: right 0.7s cubic-bezier(1, 0, 0, 1);
-	}
-	.change {
-		right: 0;
-	}
-	.hamburger_menu {
-		width: 35px;
-		height: 30px;
-		position: fixed;
-		top: 50px;
-		right: 50px;
-		display: flex;
-		flex-direction: column;
-		justify-content: space-around;
-	}
-	.nav_list {
-		/* margin-top: 50px; */
-	}
-	.line {
-		width:100%;
-		height: 3px;
-		background-color: chocolate;
-		transition: all 0.7s;
-		z-index: 2;
-	}
-	.change .line_1 {
-		transform: rotateZ(-405deg) translate(-8px, 6px);
-	}
-	.change .line_2 {
-	opacity: 0;
-	}
-	.change .line_3 {
-		transform: rotateZ(405deg) translate(-8px, -6px);
-	}
-}
 
 
 header {
@@ -279,20 +228,16 @@ main {
 	background-color: rgb(216, 47, 47);
 	animation: notValid 3s infinite;
 	color: white;
-
 }
-
 @keyframes notValid {
 	0%   {background-color: red;}
 	50%  {background-color: white;}
 	/* 90% {background-color: white;} */
 	100% {background-color: red;}
 }
-
 .hidden {
 	visibility: hidden;
 }
-
 .messageSubmitBtn {
 	display: flex;
 	flex-direction: column;
@@ -440,38 +385,230 @@ footerAdress {
 	border-right-color: rgba(0, 0, 0, 0.8);
 }
 
-
 @media (max-width: 820px) {
 	header {
-		height: 30vh;
+		height: 15vh;
 	}
 
 	header h1 {
 		font-size: 3rem;
-		line-height: 20vh;
-		padding-top: 10vh;
-	}
-
-	.nav {
-		display: flex;
-		justify-content: center;
-		flex-wrap: wrap;
-		margin: 0;
-		font-size: .2rem;
-	}
-
-	.nav__link {
-		margin: 20px 5px 0px, 5px;
-	}
-
-	.nav__link--contact {
-		margin: 20px 5px;
-		padding: 2px 20px;
+		/* line-height: 20vh; */
+align-items: flex-end;
+margin-bottom: 10px;
 	}
 }
 
+@media (max-width: 700px) {
+	header {
+		height: 10vh;
+	}
 
-@media (max-width: 500px) {
+	header h1 {
+		font-size: 2rem;
+		line-height: 10vh;
+		padding-top: 0px;
+	}
+	.nav__link {
+		display: flex;
+		flex-direction: column;
+	}
+	.nav {
+		width: 250px;
+		height: 70vh;
+		background-color: rgb(72, 177, 196);
+		position: fixed;
+		top: 0;
+		right: -300px;
+		display: flex;
+		flex-direction: column;
+		align-items: flex-end;
+		border-bottom-left-radius: 100%;
+		transition: right 0.7s cubic-bezier(1, 0, 0, 1);
+	}
+	.change {
+		right: 0;
+	}
+	.hamburger_menu {
+		width: 35px;
+		height: 30px;
+		position: fixed;
+		top: 50px;
+		right: 50px;
+		display: flex;
+		flex-direction: column;
+		justify-content: space-around;
+	}
+	.nav_list {
+		/* margin-top: 50px; */
+	}
+	.line {
+		width:100%;
+		height: 3px;
+		background-color: chocolate;
+		transition: all 0.7s;
+		z-index: 2;
+	}
+	.change .line_1 {
+		transform: rotateZ(-405deg) translate(-8px, 6px);
+	}
+	.change .line_2 {
+	opacity: 0;
+	}
+	.change .line_3 {
+		transform: rotateZ(405deg) translate(-8px, -6px);
+	}
+	main {
+		margin: 0;
+	}
+	.aboutMe{
+		display: flex;
+		/* align-items: center; */
+		/* justify-content: center; */
+		margin: 0px;
+		height: 200px;
+		width: 100vw;
+	}
+	.aboutMeTextContainer {
+		/* display: flex;
+		flex-direction: column;
+		align-items: center;
+		justify-content: center;
+		height: 100%;*/
+		width: 100%;
+		display: ruby-text;
+		/* background-color: #FFFFFF; */
+		font-size: 13px;
+		overflow: auto;
+		/* text-align: center; */
+	}
+	/* .aboutMeHeader {
+		font-variant: small-caps;
+	} */
+	.aboutMeText {
+		padding: 0px;
+	}
+
+	.aboutMePhoto {
+		display: none;
+	}
+	.myClients {
+		/* display: flex;
+		justify-content: center;
+		align-items: center; */
+		/* margin: 10px auto; */
+		height: 300px;
+		width: 100%;
+		/* background-color: #FFFFFF; */
+	}
+	.myClientsLeft {
+		width: 100vw;
+		height: 100%;
+	}
+	.myClientsLeftUp {
+		height: 50%;
+		width: 100vw;
+		text-align: center;
+		display: flex;
+		align-items:flex-end;
+		justify-content: center;
+	}
+
+	/* .myClientsLeftUpHeader {
+		font-size: 30px;
+		color: white;
+		padding-bottom: 20px;
+		font-weight: 600;
+		font-variant: small-caps;
+		text-shadow: 2px 2px 4px black;
+	} */
+
+	.myClientsLeftDown {
+		/* background-color: var(--dark-green-color); */
+		height: 50%;
+		width: 100vw;
+		padding: 0px;
+		/* font-size: 20px;
+		color: white;
+		display: flex;
+		text-align: center;
+		align-items: center;
+		padding: 20px; */
+	}
+	.myClientsRight {
+		display: none;
+	}
+
+	.myClientsRightHeader {
+		display: none;
+	}
+
+		.contactContainer {
+			display: flex;
+			margin: 0px;
+			height: 700px;
+			width: 100vw;
+			padding: 0px;
+		}
+
+		.leftContactContainer {
+			width: 100%;
+			height: 100%;
+			padding: 0px;
+
+			/* background-color: #FFFFFF;
+			display: flex;
+			flex-direction: column; */
+		}
+
+		.leftContactContainerHeader {
+			margin: 5px auto;
+			font-size: 30px;
+
+		}
+		.nameEmail {
+			flex-direction: column;
+			margin: 20px 5px;
+		}
+		.nameEmailItem {
+			width: 100%;
+			height: 40px;
+			padding: 0px;
+		}
+		.statusName, .statusEmail{
+			font-size: 15px;
+			width: 100%;
+			height: 30px;
+		}
+
+
+		.messageSubmitBtn {
+			display: flex;
+			flex-direction: column;
+			width: 100vw;
+			padding: 0px;
+
+		}
+		.messageSubmit {
+			width: 100%;
+			height: 100px;
+			margin: 20px 0px;
+			padding: 0px;
+			font-family: 'Montserrat', sans-serif;
+		}
+		.submitBtn {
+			margin: 0px ;
+			width: 100%;
+			height: 40px;
+			color: white;
+			font-size: 15px;
+		}
+		.rightContactContainer {
+			display: none;
+		}
+
+}
+
+/* @media (max-width: 500px) {
 	header h1 {
 		display: none;
 	}
@@ -503,5 +640,4 @@ footerAdress {
 		display: block;
 		background-color: rgba(0, 0, 0, 50%);
 		height: 20vh;
-	}
-}
+	} */
