--- a/slider.css
+++ b/slider.css
@@ -2,17 +2,13 @@
     height: 400px;
     width: 1200px;
     margin: 10px auto;
-
-
 }
 
 .slidesContainer {
     background-image: url(/img/opinion_background.jpg);
     background-size: cover;
-    /* background-color: rgba(0, 0, 0, 50%); */
     height: 100%;
     display: flex;
-
 }
 
 .slides {
@@ -23,68 +19,15 @@
     height: 100%;
     width: 100%;
     background-color: rgba(0, 0, 0, 10%);
-    /* display: flex; */
     flex-direction: column;
     align-items: center;
     justify-content: center;
-
 }
 
-/* .prev, .next {
-    cursor: pointer;
-    position: absolute;
-    top: 50%;
-    width: 80px;
-    margin-top: -30px;
-    padding: 16px;
-    color: var(--dark-green-color);
-    font-weight: bold;
-    font-size: 50px;
-    border-radius: 0 3px 3px 0;
-    user-select: none;
-    border-radius: 50px 0 0 50px;
-
-} */
-/* .next {
-    position: absolute;
-    right: 0;
-    border-radius: 50px 0 0 50px;
-    padding-left: 64px;
-}
-.prev {
-    border-radius: 0 50px 50px 0;
-    padding-left: 64px;
-}
-.prev:hover, .next:hover {
-    background-color: var(--dark-green-color);
-    color: var(--bright-green-color);
-}
-
-.dotContainer {
-    height: 10%;
-    text-align: center;
-    padding: 20px;
-    background: var(--dark-green-color);
-    opacity: 0.6;
-}
-.dot {
-    cursor: pointer;
-    height: 20px;
-    width: 20px;
-    margin: 1px 8px;
-    background-color: var(--background-color);
-    border-radius: 50%;
-    display: inline-block;
-    transition: background-color 0.6s ease;
-}
-.active, .dot:hover {
-    background-color: var(--bright-green-color);
-} */
 .slides h1 {
     font-style: italic;
     font-size: 25px;
     font-weight: 600;
-
 }
 
 .opinionAuthor {
@@ -92,4 +35,35 @@
     font-size: 20px;
     font-weight: 600;
     margin: 20px;
+}
+
+@media (max-width: 700px) {
+.opinionContainer {
+    height: 150px;
+    width: 100vw;
+}
+
+/* .slidesContainer {
+    background-image: url(/img/opinion_background.jpg);
+    background-size: cover;
+    height: 100%;
+    display: flex;
+} */
+
+.slides {
+    padding-left:20px;
+    padding-right:20px;
+    text-align: center;
+    margin: auto;
+    height: 100%;
+    width: 100%;
+}
+
+.slides h1 {
+    font-size: 15px;
+}
+
+.opinionAuthor {
+    font-size: 15px;
+}
 }
