--- a/style.css
+++ b/style.css
@@ -306,8 +306,8 @@ main {
 	font-size: 30px;
 }
 .offerText {
-font-size: 20px;
-padding: 20px;
+	font-size: 20px;
+	padding: 20px;
 }
 .offerBtn {
 	display: block;
@@ -385,6 +385,14 @@ footerAdress {
 	border-right-color: rgba(0, 0, 0, 0.8);
 }
 
+
+
+
+
+
+
+
+
 @media (max-width: 820px) {
 	header {
 		height: 15vh;
@@ -393,10 +401,18 @@ footerAdress {
 	header h1 {
 		font-size: 3rem;
 		/* line-height: 20vh; */
-align-items: flex-end;
-margin-bottom: 10px;
+		align-items: flex-end;
+		margin-bottom: 10px;
 	}
 }
+
+
+
+
+
+
+
+
 
 @media (max-width: 700px) {
 	header {
@@ -408,20 +424,31 @@ margin-bottom: 10px;
 		line-height: 10vh;
 		padding-top: 0px;
 	}
+	.nav__link--contact {
+		font-size: 2.0rem;
+		border: none;
+		padding: 4px 6px;
+		margin: 20px auto;
+		letter-spacing: 2px;
+	}
+	.nav__link--contact:hover {
+		background-color: transparent;
+		border-color: transparent;
+	}
 	.nav__link {
 		display: flex;
 		flex-direction: column;
 	}
 	.nav {
-		width: 250px;
-		height: 70vh;
-		background-color: rgb(72, 177, 196);
+		width: 350px;
+		height: 50vh;
+		background-color: var(--dark-green-color);
 		position: fixed;
 		top: 0;
-		right: -300px;
+		right: -350px;
 		display: flex;
 		flex-direction: column;
-		align-items: flex-end;
+		/* align-items: flex-end; */
 		border-bottom-left-radius: 100%;
 		transition: right 0.7s cubic-bezier(1, 0, 0, 1);
 	}
@@ -439,7 +466,7 @@ margin-bottom: 10px;
 		justify-content: space-around;
 	}
 	.nav_list {
-		/* margin-top: 50px; */
+		margin-bottom: 100px;
 	}
 	.line {
 		width:100%;
@@ -542,70 +569,98 @@ margin-bottom: 10px;
 		display: none;
 	}
 
-		.contactContainer {
-			display: flex;
-			margin: 0px;
-			height: 700px;
-			width: 100vw;
-			padding: 0px;
-		}
+	.contactContainer {
+		display: flex;
+		margin: 0px;
+		height: 350px;
+		width: 100vw;
+		padding: 0px;
+	}
 
-		.leftContactContainer {
-			width: 100%;
-			height: 100%;
-			padding: 0px;
+	.leftContactContainer {
+		width: 100%;
+		height: 350px;
+		padding: 0px;
+		/* background-color: #FFFFFF;
+		display: flex;
+		flex-direction: column; */
+	}
 
-			/* background-color: #FFFFFF;
-			display: flex;
-			flex-direction: column; */
-		}
+	.leftContactContainerHeader {
+		margin: 5px auto;
+		font-size: 30px;
 
-		.leftContactContainerHeader {
-			margin: 5px auto;
-			font-size: 30px;
+	}
+	.nameEmail {
+		flex-direction: column;
+		margin: 20px 5px;
+	}
+	.nameEmailItem {
+		width: 100%;
+		height: 40px;
+		padding: 0px;
+	}
+	.statusName, .statusEmail{
+		font-size: 15px;
+		width: 100%;
+		height: 30px;
+	}
+	.messageSubmitBtn {
+		display: flex;
+		flex-direction: column;
+		width: 100vw;
+		padding: 0px;
+	}
+	.messageSubmit {
 
-		}
-		.nameEmail {
-			flex-direction: column;
-			margin: 20px 5px;
-		}
-		.nameEmailItem {
-			width: 100%;
-			height: 40px;
-			padding: 0px;
-		}
-		.statusName, .statusEmail{
-			font-size: 15px;
-			width: 100%;
-			height: 30px;
-		}
+		width: 100%;
+		height: 50px;
+		margin: 10px 0px;
+		padding: 0px;
+		font-family: 'Montserrat', sans-serif;
+	}
+	.submitBtn {
+		margin: 0px auto;
+		width: 50%;
+		height: 40px;
+		font-size: 15px;
+	}
+	.rightContactContainer {
+		display: none;
+	}
 
 
-		.messageSubmitBtn {
-			display: flex;
-			flex-direction: column;
-			width: 100vw;
-			padding: 0px;
-
-		}
-		.messageSubmit {
-			width: 100%;
-			height: 100px;
-			margin: 20px 0px;
-			padding: 0px;
-			font-family: 'Montserrat', sans-serif;
-		}
-		.submitBtn {
-			margin: 0px ;
-			width: 100%;
-			height: 40px;
-			color: white;
-			font-size: 15px;
-		}
-		.rightContactContainer {
-			display: none;
-		}
-
+	.offerContainer {
+		width: 100%;
+		height: 250px;
+		/* margin: 10px auto; */
+	}
+	.offerPhoto {
+		display: none;
+	}
+	.offerTextContainer {
+		height: 250px;
+		width: 100%;
+		font-size: 16px;
+	}
+	.offerTextContainer a {
+		text-decoration: none;
+	}
+	.offerTextContainer a:hover {
+		text-decoration: underline;
+	}
+	/* .offerHeader {
+		font-variant: small-caps;
+		color: var(--dark-green-color);
+		font-size: 30px;
+	} */
+	.offerBtn {
+		margin: 0px, auto;
+		width: 50%;
+		height: 40px;
+		font-size: 15px;
+	}
+	
 }
 
 /* @media (max-width: 500px) {
