--- a/css/style.css
+++ b/css/style.css
@@ -7,61 +7,13 @@ html {
 	font-size: 10px;
 	font-family: 'Montserrat', sans-serif;
 	background-color: var(--background-color);
+	scroll-behavior: smooth;
 }
-
-.nav {
-	display: flex;
-	justify-content: flex-end;
-	position: fixed;
-	width: 100%;
-	background-color: transparent;
-	margin: 0;
-	text-align: center;
-	z-index: 999;
-	transition: all 0.2s ease;
-}
-
-.nav__link {
-	display: inline-block;
-	font-size: 2rem;
-	font-family: 'Syne Mono', monospace;
-	text-transform: uppercase;
-	text-decoration: none;
-	color: whitesmoke;
-	padding: 4px 6px;
-	margin: 20px 5px;
-	letter-spacing: 2px;
-}
-
-.nav__link--contact {
-	font-size: 2.4rem;
-	border: 1px solid #999393;
-	padding: 2px 40px;
-	margin: 20px 60px 20px 5px;
-}
-
-.nav__link:hover {
-	/* border-bottom: 1px solid var(--bright-green-color); */
-	color: var(--bright-green-color);
-	transition: 0.3s;
-}
-
-.nav__link--contact:hover {
-	background-color: var(--dark-green-color);
-	border-color: var(--dark-green-color);
-	color: var(--bright-green-color);
-}
-
-.nav__bgr {
-	background-color: #000;
-	box-shadow: 0 10px 6px -6px black;
-}
-
-
 
 header {
-	background-image: url(./img/kwiaty1.jpg);
+	background-image: url(/img/kwiaty1.jpg);
 	height: 40vh;
+	width: 100%;
 	background-size: cover;
 }
 
@@ -77,7 +29,45 @@ header h1 {
 	justify-content: center;
 	text-shadow: 2px 2px 3px black;
 }
+.nav {
+	display: flex;
+	justify-content: flex-end;
+	position: fixed;
+	width: 100vw;
+	background-color: transparent;
+	margin: 0;
+	text-align: center;
+	z-index: 999;
+	transition: all 0.2s ease;
+}
+.nav_list {
+	margin-right: 50px;
+}
+.nav__link {
+	display: inline-block;
+	font-size: 2rem;
+	font-family: 'Syne Mono', monospace;
+	text-transform: uppercase;
+	text-decoration: none;
+	color: whitesmoke;
+	padding: 4px 6px;
+	margin: 20px 5px;
+	letter-spacing: 2px;
+}
 
+.nav__link:hover {
+	color: var(--bright-green-color);
+	transition: 0.3s;
+}
+.nav__link--contact:hover {
+	background-color: var(--dark-green-color);
+	border-color: var(--dark-green-color);
+	color: var(--bright-green-color);
+}
+.nav__bgr {
+	background-color: #000;
+	box-shadow: 0 10px 6px -6px black;
+}
 .none {
 	display: none;
 }
@@ -87,10 +77,8 @@ main {
 }
 .aboutMe{
 	display: flex;
-	/* align-items: center; */
-	/* justify-content: center; */
 	margin: 10px auto;
-	height: 400px;
+	height: 500px;
 	width: 1200px;
 }
 .aboutMeTextContainer {
@@ -113,10 +101,9 @@ main {
 
 .aboutMePhoto {
 	display: flex;
-	height: 400px;
+	height: auto;
 	width: 800px;
 }
-
 .myClients {
 	display: flex;
 	justify-content: center;
@@ -141,7 +128,6 @@ main {
 	align-items:flex-end;
 	justify-content: center;
 }
-
 .myClientsLeftUpHeader {
 	font-size: 30px;
 	color: white;
@@ -150,7 +136,6 @@ main {
 	font-variant: small-caps;
 	text-shadow: 2px 2px 4px black;
 }
-
 .myClientsLeftDown {
 	background-color: var(--dark-green-color);
 	height: 50%;
@@ -172,22 +157,18 @@ main {
 	justify-content: center;
 	text-align: center;
 }
-
 .myClientsRightHeader {
 	font-variant: small-caps;
 }
-
 .myClientsRightText {
 	padding: 20px;
 	}
-
 .contactContainer {
 	display: flex;
 	margin: 10px auto;
 	height: 700px;
 	width: 1200px;
 }
-
 .leftContactContainer {
 	width: 50%;
 	height: 100%;
@@ -195,7 +176,6 @@ main {
 	display: flex;
 	flex-direction: column;
 }
-
 .leftContactContainerHeader {
 	display: flex;
 	justify-content: center;
@@ -302,7 +282,6 @@ main {
 }
 .offerHeader {
 	font-variant: small-caps;
-	color: var(--dark-green-color);
 	font-size: 30px;
 }
 .offerText {
@@ -322,7 +301,6 @@ main {
 	padding: auto, 15px;
 }
 
-
 footer {
 	background-color: #000;
 	color: aliceblue;
@@ -330,11 +308,11 @@ footer {
 	font-size: 21px;
 	display: flex;
 	height: 400px;
+	width: 100%;
 	flex-direction: column;
 	align-items: center;
 	justify-content:space-between ;
 }
-
 .footerInfos {
 	display: flex;
 	flex-direction: column;
@@ -344,7 +322,6 @@ footer {
 	padding: 30px;
 	margin-top: 20px   ;
 }
-
 .footerPhone {
 	display: flex;
 	padding-bottom: 20px;
@@ -361,7 +338,6 @@ footerAdress {
 	height: 500px;
 	width: 100%;
 }
-
 .popup {
 	background-color: black;
 	color: white;
@@ -369,7 +345,6 @@ footerAdress {
 	padding: 0.5rem;
 	font-size: 1.3rem;
 }
-
 .popup:after {
 	position: absolute;
 	z-index: 1;
@@ -386,13 +361,6 @@ footerAdress {
 }
 
 
-
-
-
-
-
-
-
 @media (max-width: 820px) {
 	header {
 		height: 15vh;
@@ -400,19 +368,10 @@ footerAdress {
 
 	header h1 {
 		font-size: 3rem;
-		/* line-height: 20vh; */
 		align-items: flex-end;
 		margin-bottom: 10px;
 	}
 }
-
-
-
-
-
-
-
-
 
 @media (max-width: 700px) {
 	header {
@@ -424,23 +383,9 @@ footerAdress {
 		line-height: 10vh;
 		padding-top: 0px;
 	}
-	.nav__link--contact {
-		font-size: 2.0rem;
-		border: none;
-		padding: 4px 6px;
-		margin: 20px auto;
-		letter-spacing: 2px;
-	}
-	.nav__link--contact:hover {
-		background-color: transparent;
-		border-color: transparent;
-	}
-	.nav__link {
-		display: flex;
-		flex-direction: column;
-	}
+
 	.nav {
-		width: 350px;
+		width: 50vw;
 		height: 50vh;
 		background-color: var(--dark-green-color);
 		position: fixed;
@@ -452,6 +397,17 @@ footerAdress {
 		border-bottom-left-radius: 100%;
 		transition: right 0.7s cubic-bezier(1, 0, 0, 1);
 	}
+	.nav_list {
+		margin:auto 15px ;
+		text-align: end;
+		/* justify-content: center; */
+	}
+	.nav__link {
+		display: flex;
+		flex-direction: column;
+		margin: 5px 0px;
+	}
+
 	.change {
 		right: 0;
 	}
@@ -464,9 +420,6 @@ footerAdress {
 		display: flex;
 		flex-direction: column;
 		justify-content: space-around;
-	}
-	.nav_list {
-		margin-bottom: 100px;
 	}
 	.line {
 		width:100%;
@@ -484,140 +437,86 @@ footerAdress {
 	.change .line_3 {
 		transform: rotateZ(405deg) translate(-8px, -6px);
 	}
+
+
 	main {
 		margin: 0;
 	}
 	.aboutMe{
 		display: flex;
-		/* align-items: center; */
-		/* justify-content: center; */
 		margin: 0px;
 		height: 200px;
-		width: 100vw;
+		width: 100%;
 	}
 	.aboutMeTextContainer {
-		/* display: flex;
-		flex-direction: column;
-		align-items: center;
-		justify-content: center;
-		height: 100%;*/
 		width: 100%;
 		display: ruby-text;
-		/* background-color: #FFFFFF; */
 		font-size: 13px;
 		overflow: auto;
-		/* text-align: center; */
 	}
-	/* .aboutMeHeader {
-		font-variant: small-caps;
-	} */
 	.aboutMeText {
 		padding: 0px;
 	}
-
 	.aboutMePhoto {
 		display: none;
 	}
 	.myClients {
-		/* display: flex;
-		justify-content: center;
-		align-items: center; */
-		/* margin: 10px auto; */
 		height: 300px;
 		width: 100%;
-		/* background-color: #FFFFFF; */
 	}
 	.myClientsLeft {
-		width: 100vw;
+		width: 100%;
 		height: 100%;
 	}
 	.myClientsLeftUp {
-		height: 50%;
-		width: 100vw;
-		text-align: center;
-		display: flex;
-		align-items:flex-end;
-		justify-content: center;
+		width: 100%;
 	}
-
-	/* .myClientsLeftUpHeader {
-		font-size: 30px;
-		color: white;
-		padding-bottom: 20px;
-		font-weight: 600;
-		font-variant: small-caps;
-		text-shadow: 2px 2px 4px black;
-	} */
-
 	.myClientsLeftDown {
-		/* background-color: var(--dark-green-color); */
-		height: 50%;
-		width: 100vw;
+		width: 100%;
 		padding: 0px;
-		/* font-size: 20px;
-		color: white;
-		display: flex;
-		text-align: center;
-		align-items: center;
-		padding: 20px; */
 	}
 	.myClientsRight {
 		display: none;
 	}
-
-	.myClientsRightHeader {
-		display: none;
-	}
-
 	.contactContainer {
-		display: flex;
 		margin: 0px;
 		height: 350px;
-		width: 100vw;
+		width: 100%;
 		padding: 0px;
 	}
-
 	.leftContactContainer {
 		width: 100%;
 		height: 350px;
 		padding: 0px;
-		/* background-color: #FFFFFF;
-		display: flex;
-		flex-direction: column; */
 	}
-
 	.leftContactContainerHeader {
 		margin: 5px auto;
 		font-size: 30px;
-
+		text-align: center;
 	}
 	.nameEmail {
 		flex-direction: column;
-		margin: 20px 5px;
+		margin: 2px 5px;
 	}
 	.nameEmailItem {
-		width: 100%;
+		width: 93vw;
 		height: 40px;
-		padding: 0px;
+		padding: 0px 10px;
 	}
 	.statusName, .statusEmail{
-		font-size: 15px;
-		width: 100%;
-		height: 30px;
+		width: 95vw;
 	}
 	.messageSubmitBtn {
-		display: flex;
-		flex-direction: column;
-		width: 100vw;
+		width: 100%;
 		padding: 0px;
 	}
 	.messageSubmit {
-
-		width: 100%;
+		display: flex;
+		justify-content: space-between;
+		width: 93vw;
 		height: 50px;
-		margin: 10px 0px;
-		padding: 0px;
-		font-family: 'Montserrat', sans-serif;
+		margin: auto;
+		padding: 10px;
 	}
 	.submitBtn {
 		margin: 0px auto;
@@ -628,12 +527,9 @@ footerAdress {
 	.rightContactContainer {
 		display: none;
 	}
-
-
 	.offerContainer {
 		width: 100%;
 		height: 250px;
-		/* margin: 10px auto; */
 	}
 	.offerPhoto {
 		display: none;
@@ -641,7 +537,6 @@ footerAdress {
 	.offerTextContainer {
 		height: 250px;
 		width: 100%;
-		font-size: 16px;
 	}
 	.offerTextContainer a {
 		text-decoration: none;
@@ -649,50 +544,15 @@ footerAdress {
 	.offerTextContainer a:hover {
 		text-decoration: underline;
 	}
-	/* .offerHeader {
-		font-variant: small-caps;
-		color: var(--dark-green-color);
-		font-size: 30px;
-	} */
 	.offerBtn {
 		margin: 0px, auto;
 		width: 50%;
 		height: 40px;
 		font-size: 15px;
 	}
-	
+	footer {
+		padding: 10px;
+		font-size: 15px;
+		height: 200px;
+	}
 }
-
-/* @media (max-width: 500px) {
-	header h1 {
-		display: none;
-	}
-
-	header {
-		height: 17vh;
-	}
-
-	.none {
-		display: block;
-		background-color: rgba(0, 0, 0, 50%);
-		height: 17vh;
-	}
-
-	.nav__link {
-		margin: 20px 5px 0px;
-		letter-spacing: 2px;
-	}
-
-
-	}
-
-@media (max-width: 356px) {
-	.nav__link {
-		letter-spacing: 2px;
-	}
-
-	.none {
-		display: block;
-		background-color: rgba(0, 0, 0, 50%);
-		height: 20vh;
-	} */
