--- a/css/styleOffer.css
+++ b/css/styleOffer.css
@@ -81,14 +81,14 @@ html {
 .flowersOffer {
     margin: 20px auto;
     height: 100%;
-	width: 1300px;
+	width: 100vw;
     display: flex;
     flex-wrap: wrap;
 	justify-content: center;
 	align-items: center;
 }
 .flowerItemsContainer {
-    height: 300px;
+    height: 400px;
     width:300px;
     border: 1px solid black;
     border-radius: 20px;
@@ -118,4 +118,70 @@ html {
 	z-index: 99;
 	display: flex;
 	align-self: flex-end;
+}
+
+
+
+
+@media (max-width: 700px) {
+	.nav__link--contact {
+		font-size: 2.0rem;
+		border: none;
+		padding: 4px 6px;
+		margin: 20px auto;
+		letter-spacing: 2px;
+	}
+	.nav__link--contact:hover {
+		background-color: transparent;
+		border-color: transparent;
+	}
+	.nav__link {
+		display: flex;
+		flex-direction: column;
+	}
+	.nav {
+		width: 350px;
+		height: 50vh;
+		background-color: var(--dark-green-color);
+		position: fixed;
+		top: 0;
+		right: -350px;
+		display: flex;
+		flex-direction: column;
+		/* align-items: flex-end; */
+		border-bottom-left-radius: 100%;
+		transition: right 0.7s cubic-bezier(1, 0, 0, 1);
+	}
+	.nav_list {
+		margin-bottom: 100px;
+	}
+	.change {
+		right: 0;
+	}
+	.hamburger_menu {
+		width: 35px;
+		height: 30px;
+		position: fixed;
+		top: 50px;
+		right: 50px;
+		display: flex;
+		flex-direction: column;
+		justify-content: space-around;
+	}
+	.line {
+		width:100%;
+		height: 3px;
+		background-color: chocolate;
+		transition: all 0.7s;
+		z-index: 2;
+	}
+	.change .line_1 {
+		transform: rotateZ(-405deg) translate(-8px, 6px);
+	}
+	.change .line_2 {
+	opacity: 0;
+	}
+	.change .line_3 {
+		transform: rotateZ(405deg) translate(-8px, -6px);
+	}
 }
