--- a/SASS/_variables.scss
+++ b/SASS/_variables.scss
@@ -1,5 +1,8 @@
 $dark-green: rgb(18, 74, 47);
 $bright-green: rgb(172, 218, 6);
 $background-color: rgb(238, 240, 213);
+$small-font: rgb(24, 24, 24);
 
-$error: rgb(241, 44, 159);
+$error: rgb(174, 11, 11);
+
+$LG-con-width: 1200px;
