--- a/SASS/index.scss
+++ b/SASS/index.scss
@@ -1,54 +1,111 @@
+@import "nav";
+@import "aboutMe";
+@import "contact";
+@import "myClients";
+@import "footer";
+@import "opinion";
+@import "offer";
 //variables & functions
-
 @import "variables";
-
 // base & layout
-@import "base";
+@import "breakpoints";
 
 * {
+  margin: 0;
+  padding: 0;
   border: 0;
 }
 
-// .nav__bgr {
-//   background-color: #000;
-//   box-shadow: 0 10px 6px -6px black;
-// }
+html {
+  font-size: 12px;
+  font-family: "Montserrat", sans-serif;
+  background-color: $background-color;
+  scroll-behavior: smooth;
+}
+
+.wrapper {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  margin: auto;
+  @include md {
+    width: 80vw;
+  }
+  @include lg {
+    width: 70vw;
+  }
+  @include xl {
+    width: 60vw;
+  }
+}
 
 .header {
-  background-image: url(/img/kwiaty1.jpg);
-  height: 40vh;
+  background-image: url(../img/kwiaty1.jpg);
+  height: 20vh;
   width: 100%;
   background-size: cover;
+  @include md {
+    height: 30vh;
+  }
   &__none {
     display: none;
   }
   &__catchword {
-    font-size: 5rem;
+    font-size: 2rem;
     color: whitesmoke;
     text-align: center;
     height: 100%;
-    background-color: rgba(0, 0, 0, 50%);
+    background-color: rgba(0, 0, 0, 0.324);
     display: flex;
     /* flex-wrap: wrap; */
     align-items: center;
     justify-content: center;
     text-shadow: 2px 2px 3px black;
+    @include md {
+      line-height: 20vh;
+      font-size: 3rem;
+      align-items: flex-end;
+    }
   }
 }
 
-main {
-  margin: auto;
-}
+// @media (max-width: 820px) {
+//   // header {
+//   //   height: 15vh;
+//   // }
+
+//   header h1 {
+//     font-size: 3rem;
+//     align-items: flex-end;
+//     margin-bottom: 10px;
+//   }
+// }
+
+// @media (max-width: 700px) {
+//   // header {
+//   //   height: 10vh;
+//   // }
+
+//   header h1 {
+//     font-size: 2rem;
+//     line-height: 10vh;
+//     padding-top: 0px;
+//   }
+// }
 
 .map {
-  height: 500px;
+  height: 40vh;
   width: 100%;
+  @include lg {
+    margin: 20px 0;
+    height: 60vh;
+  }
   &__popup {
     background-color: black;
     color: white;
     border-radius: 5px;
     padding: 0.5rem;
-    font-size: 1.3rem;
+    font-size: 1rem;
   }
   &__popup:after {
     position: absolute;
@@ -63,204 +120,5 @@ main {
     transform: translateY(-50%);
     border-left-width: 0;
     border-right-color: rgba(0, 0, 0, 0.8);
-  }
-}
-
-@media (max-width: 820px) {
-  header {
-    height: 15vh;
-  }
-
-  header h1 {
-    font-size: 3rem;
-    align-items: flex-end;
-    margin-bottom: 10px;
-  }
-}
-
-@media (max-width: 700px) {
-  header {
-    height: 10vh;
-  }
-
-  header h1 {
-    font-size: 2rem;
-    line-height: 10vh;
-    padding-top: 0px;
-  }
-
-  .nav {
-    width: 50vw;
-    height: 50vh;
-    background-color: $dark-green;
-    position: fixed;
-    top: 0;
-    right: -350px;
-    display: flex;
-    flex-direction: column;
-    /* align-items: flex-end; */
-    border-bottom-left-radius: 100%;
-    transition: right 0.7s cubic-bezier(1, 0, 0, 1);
-
-    &__hamburger {
-      width: 35px;
-      height: 30px;
-      position: fixed;
-      top: 50px;
-      right: 50px;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-around;
-
-      &--line {
-        width: 100%;
-        height: 3px;
-        background-color: chocolate;
-        transition: all 0.7s;
-        z-index: 2;
-      }
-    }
-  }
-  .nav_list {
-    margin: auto 15px;
-    text-align: end;
-    /* justify-content: center; */
-  }
-  .nav__link {
-    display: flex;
-    flex-direction: column;
-    margin: 5px 0px;
-  }
-
-  .change {
-    right: 0;
-  }
-
-  .change .line_1 {
-    transform: rotateZ(-405deg) translate(-8px, 6px);
-  }
-  .change .line_2 {
-    opacity: 0;
-  }
-  .change .line_3 {
-    transform: rotateZ(405deg) translate(-8px, -6px);
-  }
-
-  main {
-    margin: 0;
-  }
-  .aboutMe {
-    display: flex;
-    margin: 0px;
-    height: 200px;
-    width: 100%;
-  }
-  .aboutMeTextContainer {
-    width: 100%;
-    display: ruby-text;
-    font-size: 13px;
-    overflow: auto;
-  }
-  .aboutMeText {
-    padding: 0px;
-  }
-  .aboutMePhoto {
-    display: none;
-  }
-  .myClients {
-    height: 300px;
-    width: 100%;
-  }
-  .myClientsLeft {
-    width: 100%;
-    height: 100%;
-  }
-  .myClientsLeftUp {
-    width: 100%;
-  }
-  .myClientsLeftDown {
-    width: 100%;
-    padding: 0px;
-  }
-  .myClientsRight {
-    display: none;
-  }
-  .contactContainer {
-    margin: 0px;
-    height: 350px;
-    width: 100%;
-    padding: 0px;
-  }
-  .leftContactContainer {
-    width: 100%;
-    height: 350px;
-    padding: 0px;
-  }
-  .leftContactContainerHeader {
-    margin: 5px auto;
-    font-size: 30px;
-    text-align: center;
-  }
-  .nameEmail {
-    flex-direction: column;
-    margin: 2px 5px;
-  }
-  .nameEmailItem {
-    width: 93vw;
-    height: 40px;
-    padding: 0px 10px;
-  }
-  .statusName,
-  .statusEmail {
-    width: 95vw;
-  }
-  .messageSubmitBtn {
-    width: 100%;
-    padding: 0px;
-  }
-  .messageSubmit {
-    display: flex;
-    justify-content: space-between;
-    width: 93vw;
-    height: 50px;
-    margin: auto;
-    padding: 10px;
-  }
-  .submitBtn {
-    margin: 0px auto;
-    width: 50%;
-    height: 40px;
-    font-size: 15px;
-  }
-  .rightContactContainer {
-    display: none;
-  }
-  .offerContainer {
-    width: 100%;
-    height: 250px;
-  }
-  .offerPhoto {
-    display: none;
-  }
-  .offerTextContainer {
-    height: 250px;
-    width: 100%;
-  }
-  .offerTextContainer a {
-    text-decoration: none;
-  }
-  .offerTextContainer a:hover {
-    text-decoration: underline;
-  }
-  .offerBtn {
-    margin: 0px, auto;
-    width: 50%;
-    height: 40px;
-    font-size: 15px;
-  }
-  footer {
-    padding: 10px;
-    font-size: 15px;
-    height: 200px;
   }
 }
