--- a/SASS/_aboutMe.scss
+++ b/SASS/_aboutMe.scss
@@ -7,12 +7,13 @@
 .aboutMe {
   display: flex;
   color: $dark-green;
-  display: flex;
+
   width: 100%;
-  // height: 100%;
+  height: 100%;
   @include md {
     margin: 20px 0;
-    height: 40vh;
+    min-height: 40vh;
+    // height: fit-content;
   }
   // @include lg {
   //   margin: 40px 0;
@@ -22,7 +23,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100%;
+
     // width: 400px;
     background-color: #ffffff;
     font-size: 1rem;
@@ -46,10 +47,16 @@
     display: none;
     @include lg {
       display: flex;
+      align-items: center;
+      justify-content: center;
       height: auto;
       width: 50%;
+      overflow: hidden;
     }
   }
+}
+.xxx {
+  height: 100%;
 }
 // .aboutMe {
 //   color: rgb(17, 94, 21);
