--- a/SASS/_myClients.scss
+++ b/SASS/_myClients.scss
@@ -2,23 +2,24 @@
 
 // base & layout
 @import "base";
+@import "breakpoints";
 
 .myClients {
   display: flex;
   justify-content: center;
   align-items: center;
-  // margin: 10px auto;
-  // height: 500px;
-  width: 100%;
-  // height: 35vh;
 
+  width: 100%;
   background-color: #ffffff;
-  @include lg {
+  @include md {
+    min-height: 40vh;
     height: 40vh;
   }
 }
+
 .one {
   display: none;
+  height: 100%;
   @include lg {
     display: flex;
     flex-direction: column;
@@ -34,6 +35,7 @@
     align-items: flex-end;
     justify-content: center;
     height: 100%;
+    border: 1px solid red;
     @include xl {
       height: 50%;
     }
@@ -75,7 +77,7 @@
 .two {
   display: flex;
   flex-direction: column;
-  // padding: 20px;
+  padding: 20px;
   height: 100%;
   align-items: center;
   justify-content: center;
