--- a/SASS/_nav.scss
+++ b/SASS/_nav.scss
@@ -7,7 +7,7 @@
   width: 70vw;
   height: 60vh;
   background-color: $dark-green;
-  position: fixed;
+  position: absolute;
   top: 0;
   right: -370px;
   display: flex;
@@ -36,27 +36,6 @@
     transition: all 0.2s ease;
   }
 
-  &__hamburger {
-    width: 35px;
-    height: 30px;
-    position: fixed;
-    top: 10px;
-    right: 30px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    @include md {
-      display: none;
-    }
-
-    &--line {
-      width: 100%;
-      height: 3px;
-      background-color: chocolate;
-      transition: all 0.7s;
-      z-index: 2;
-    }
-  }
   &__list {
     margin: 40px 5px 0 0;
     text-align: end;
@@ -115,9 +94,27 @@
     justify-content: flex-start;
   }
 }
+.nav__hamburger {
+  width: 35px;
+  height: 30px;
+  position: absolute;
+  top: 10px;
+  right: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  z-index: 999;
+  @include md {
+    display: none;
+  }
 
-.change {
-  right: 0;
+  &--line {
+    width: 100%;
+    height: 3px;
+    background-color: chocolate;
+    transition: all 0.7s;
+    z-index: 2;
+  }
 }
 
 .change .line_1 {
@@ -129,7 +126,9 @@
 .change .line_3 {
   transform: rotateZ(405deg) translate(-8px, -6px);
 }
-
+.moveRight {
+  right: 0;
+}
 // .nav {
 
 //   &__list {
