--- a/SASS/_offer.scss
+++ b/SASS/_offer.scss
@@ -1,6 +1,9 @@
 .offer {
   width: 100%;
   // height: 25vh;
+  display: flex;
+  flex-direction: row-reverse;
+
   @include lg {
     height: 40vh;
     margin: 20px 0;
@@ -9,12 +12,13 @@
   &__photo {
     display: none;
     @include lg {
+      display: flex;
       background-image: url(../img/offerPhoto.jpg);
       background-size: cover;
       height: 40vh;
       border: 1px solid red;
       width: 50%;
-      z-index: 999;
+      // z-index: 999;
     }
   }
 
