--- a/SASS/index.css
+++ b/SASS/index.css
@@ -2,7 +2,7 @@
   width: 70vw;
   height: 60vh;
   background-color: #124a2f;
-  position: fixed;
+  position: absolute;
   top: 0;
   right: -370px;
   display: -webkit-box;
@@ -49,38 +49,6 @@
     -webkit-transition: all 0.2s ease;
     transition: all 0.2s ease;
   }
-}
-
-.nav__hamburger {
-  width: 35px;
-  height: 30px;
-  position: fixed;
-  top: 10px;
-  right: 30px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-}
-
-@media (min-width: 768px) {
-  .nav__hamburger {
-    display: none;
-  }
-}
-
-.nav__hamburger--line {
-  width: 100%;
-  height: 3px;
-  background-color: chocolate;
-  -webkit-transition: all 0.7s;
-  transition: all 0.7s;
-  z-index: 2;
 }
 
 .nav__list {
@@ -173,8 +141,37 @@
           justify-content: flex-start;
 }
 
-.change {
-  right: 0;
+.nav__hamburger {
+  width: 35px;
+  height: 30px;
+  position: absolute;
+  top: 10px;
+  right: 30px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  z-index: 999;
+}
+
+@media (min-width: 768px) {
+  .nav__hamburger {
+    display: none;
+  }
+}
+
+.nav__hamburger--line {
+  width: 100%;
+  height: 3px;
+  background-color: chocolate;
+  -webkit-transition: all 0.7s;
+  transition: all 0.7s;
+  z-index: 2;
 }
 
 .change .line_1 {
@@ -191,19 +188,23 @@
           transform: rotateZ(405deg) translate(-8px, -6px);
 }
 
+.moveRight {
+  right: 0;
+}
+
 .aboutMe {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   color: #124a2f;
-  display: flex;
   width: 100%;
+  height: 100%;
 }
 
 @media (min-width: 768px) {
   .aboutMe {
     margin: 20px 0;
-    height: 40vh;
+    min-height: 40vh;
   }
 }
 
@@ -221,7 +222,6 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  height: 100%;
   background-color: #ffffff;
   font-size: 1rem;
   text-align: center;
@@ -253,9 +253,20 @@
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     height: auto;
     width: 50%;
+    overflow: hidden;
   }
+}
+
+.xxx {
+  height: 100%;
 }
 
 .contact {
@@ -532,14 +543,16 @@
   background-color: #ffffff;
 }
 
-@media (min-width: 992px) {
+@media (min-width: 768px) {
   .myClients {
+    min-height: 40vh;
     height: 40vh;
   }
 }
 
 .one {
   display: none;
+  height: 100%;
 }
 
 @media (min-width: 992px) {
@@ -570,6 +583,7 @@
       -ms-flex-pack: center;
           justify-content: center;
   height: 100%;
+  border: 1px solid red;
 }
 
 @media (min-width: 1200px) {
@@ -638,6 +652,7 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  padding: 20px;
   height: 100%;
   -webkit-box-align: center;
       -ms-flex-align: center;
@@ -785,6 +800,13 @@
 
 .offer {
   width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: reverse;
+      -ms-flex-direction: row-reverse;
+          flex-direction: row-reverse;
 }
 
 @media (min-width: 992px) {
@@ -800,12 +822,14 @@
 
 @media (min-width: 992px) {
   .offer__photo {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
     background-image: url(../img/offerPhoto.jpg);
     background-size: cover;
     height: 40vh;
     border: 1px solid red;
     width: 50%;
-    z-index: 999;
   }
 }
 
@@ -881,6 +905,8 @@ html {
   font-family: "Montserrat", sans-serif;
   background-color: #eef0d5;
   scroll-behavior: smooth;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 .wrapper {
